# kiss_sdl2

./: .gitignore  .kiss_makefile.swp  CMakeLists.txt  Makefile  README.md  Readme.txt  SDL2_kiss.pc.in  build.xml
jni/: Application.mk  SDL  SDL_image  SDL_mixer  SDL_ttf  smpeg2
jni/src/: Android.mk  Makefile  playmus.c
res/values/: strings.xml
src/: kiss_draw.c  kiss_widgets.c
src/org/libsdl/app/: SDLActivity.java
